unpackaged/objects/ApexDeveloperLog__c.object
<CustomObject>
    <fields>
        <fullName>ApexClass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Apex Class</label>
        <referenceTo>ApexClass__c</referenceTo>
        <relationshipLabel>Apex Developer Logs</relationshipLabel>
        <relationshipName>Apex_Developer_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApexDeveloper__c</fullName>
        <label>Apex Developer</label>
        <referenceTo>ApexDeveloper__c</referenceTo>
        <relationshipLabel>Apex Developer Logs</relationshipLabel>
        <relationshipName>Apex_Developer_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Apex Developer Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ApexClass__c</columns>
        <columns>Date__c</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Nome de Apex Developer Log</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apex Developer Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>